# web-logger

./: README.md
crates/web-logger/: Cargo.toml
crates/web-logger-runtime/: Cargo.toml  index.html  index.scss
crates/web-logger-runtime/src/: main.rs
crates/web-logger-shared/: Cargo.toml
crates/web-logger-shared/src/: components.rs  lib.rs
crates/web-logger-shared/src/components/: core.rs  mod.rs  stdlib.rs
crates/web-logger/examples/: simple.rs
crates/web-logger/src/: lib.rs
