[package]
name = "web-logger-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", features = ["std"]}
yew = "0.19"
gloo-net = "0.1"
gloo-timers = {version = "0.2", features = ["futures"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
futures = "0.3"
wasm-logger = "0.2"
serde_json = "1"
web-logger-shared = {path = "../web-logger-shared"}