[package]
name = "web-logger-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
log = {version = "0.4", features = ["std", "kv_unstable_serde"]}
yew = "0.19"
linkme = "0.2"
