[package]
name = "web-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", features = ["std", "kv_unstable_serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
yew = "0.19"
tungstenite = "0.17"
web-logger-shared = {path = "../web-logger-shared"}